--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "@types/csv-parse": "^1.2.2",
-    "csv-parse": "^4.8.8",
+    "cors": "^2.8.5",
+    "csv-parse": "^4.10.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
@@ -22,10 +23,11 @@
     "typeorm": "^0.2.24"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.6",
     "@types/express": "4.17.3",
     "@types/express-serve-static-core": "4.17.2",
     "@types/jest": "^25.2.1",
-    "@types/multer": "^1.4.2",
+    "@types/multer": "^1.4.3",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
